# 25-1HCI_Team6

./: AI_Plan_side.html  Dockerfile  README.md  ai_learning_planner_start.html  chat.html  daily_Feedback.html  docker-compose.yml  entrypoint.sh  feedback.html  flake.nix  goal_timer_app.html  home.html  index.html  model.py  plan.html  pyproject.toml  setting.html  signup.html  signup_html.html  study_planner_home_(ver. REACT).html  timer.html
app/: api.py  db.py  model.py  prompt.py
backend/: api.py  app.py  core.py  frontend.py  knowledge_base.py  model.py  prompt.py
backend/static/: chat.html  feedback.html  home.html  index.html  plan.html  setting.html  signup.html  timer.html
