[tool.poetry]
name = "dozi-api"
version = "0.1.0"
description = ""
authors = ["WallabyG <spearmint1022@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.11.5"
openai = "^1.82.1"
instructor = "^1.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
